added health check to target group

--- a/cloudformation/base.cfn.yml
+++ b/cloudformation/base.cfn.yml
@@ -57,6 +57,7 @@ Resources:
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
+      HealthCheckPath: "/status"
       Protocol: HTTP
       Port: !Ref PublishPort
       VpcId: !Ref TargetVpcId
